# arrow-rs

./: Cargo.toml
arrow-zarr/: Cargo.toml
arrow-zarr/src/: lib.rs
arrow-zarr/src/async_reader/: mod.rs  zarr_read_async.rs
arrow-zarr/src/reader/: errors.rs  filters.rs  metadata.rs  mod.rs  store_reader.rs  zarr_read.rs
arrow-zarr/src/zarr_chunk/: chunk.rs
