[package]
name = "arrow-zarr"
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
include.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
arrow-schema = { workspace = true }
arrow-data = { workspace = true }
async-trait = { version = "0.1.53" }
itertools = { version = "0.12.0"}
regex = { version = "1.9.5" }
serde_json = { version = "1.0.107" }
serde = {version = "1.0.188", features = ["derive"]}
flate2 = { version = "1.0.27"}
bzip2 = { version = "0.4.4" }
rust-lzma = { version = "0.6.0" }
blosc = { version = "0.2.0" }
object_store = { version = "0.9" }
futures = { version = "0.3"}
futures-util = { version = "0.3.30" }
tokio = { version = "1.0" }
dyn-clone = { version = "1.0.16" }